fix errors on dark mode and finish from calender page and FAQs......

--- a/src/page/calendar/calender.css
+++ b/src/page/calendar/calender.css
@@ -10,8 +10,7 @@
 .demo-app-sidebar {
   width: 300px;
   line-height: 1.5;
-  background: #eaf9ff;
-  border-right: 1px solid #d3e2e8;
+  border-right: 1px solid #ddd;
 }
 
 .demo-app-sidebar-section {
